comment out index liquid but keep file. also fixed featured product section title heading spacing with padding 3rem

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -28,4 +28,6 @@
 }
 .featured-products-wrapper {
   background-color: var(--grey);
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
